--- a/pages/center/bill-list/bill-list.wxml
+++ b/pages/center/bill-list/bill-list.wxml
@@ -1,8 +1,20 @@
 <view class='page-section-gap'>
-  <view class="btn" bindtap="changeBtn">
-    <view class="{{currentIndex==2?'active':''}}" data-index="2" bindtap='getOrderList'>全部</view>
-    <view class="{{currentIndex==1?'active':''}}" data-index="1" bindtap='getOrderList'>已支付</view>
-    <view class="{{currentIndex==0?'active':''}}" data-index="0" bindtap='getOrderList'>未完成</view>
+  <view class='header'>
+    <view class='header-left'>
+      <text>收入:{{income}}</text>
+      <text>支出:{{0 - outlay}}</text>
+    </view>
+    <view class='header-right'>
+      <view class='list-section' bindtap='bindShowMsg'>
+        <text>{{selectText}}</text>
+        <image src='../../../image/down.png'></image>
+      </view>
+      <view class="select_box" wx:if="{{select}}">
+        <view class="select_one" bindtap="mySelect" data-name="全部">全部</view>
+        <view class="select_one" bindtap="mySelect" data-name="收入">收入</view>
+        <view class="select_one" bindtap="mySelect" data-name="支出">支出</view>
+    </view>
+    </view>
   </view>
   <view class='content'>
     <scroll-view
@@ -12,29 +24,20 @@
       scroll-top="{{scrollTop}}"
       bindscroll="scroll"
       bindscrolltoupper="upper"
-      bindscrolltolower="lower" wx:if='{{billList.length>0}}'>
-      <view wx:for="{{billList}}" wx:key="unique" class='order-list'>
-        <view class='list-top'>
-          <view class='item-title'>订单号：{{item.orderId}}</view>
-          <view class='item-detail' data-bean='{{item}}' bindtap='goDetail'>查看详情 ></view>
-        </view>
-        <view class='list-bottom'>
-          <view class='item-left'>
-            <view class='item-info'>
-              <image src='../../../image/car.png'></image>
-              <text>{{item.garageName}}</text>
-            </view>
-            <view class='item-info'>
-              <image src='../../../image/calendar.png'></image>
-              <text>{{item.startTime}}</text>
-            </view>
-            <view class='item-info'>
-              <image src='../../../image/time.png'></image>
-              <text>{{item.duration}}小时</text>
-            </view>
+      bindscrolltolower="lower" wx:if='{{dataList.length>0}}'>
+      <view wx:for="{{dataList}}" wx:key="unique" class='list'>
+        <view class='item-left'>
+          <view class='item-type'>
+            {{item.type}}
           </view>
-          <view hidden='{{item.status==0}}' class='item-status' style='color: red;'>已支付</view>
-          <view hidden='{{item.status==1}}' class='item-status' style='color: green;'>待付款</view>
+          <view class='item-time'>
+            {{item.createTime}}
+          </view>
+        </view>
+        <view class='item-right'>
+          <view class="{{item.money>0?'income-status':'outlay-status'}}">
+            {{item.money>0?'+' + item.money:item.money}}
+          </view>
         </view>
       </view>
     </scroll-view>
