--- a/pages/park/detail/detail.wxml
+++ b/pages/park/detail/detail.wxml
@@ -1,3 +1,4 @@
+<wxs module="filter" src="../../../utils/numberToFixed.wxs"></wxs>
 <view class="park-warp">
   <view class="park-banner">
     <swiper circular="true" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
@@ -17,7 +18,7 @@
     </view>
     <view class='info-address clear'>
       <view class='park-address'>{{parkInfo.address}}</view>
-      <view class='park-distance'>{{distance}}m</view>
+      <view class='park-distance'>{{distance>1000?filter.numberToFixed(distance/1000)+'km':distance+'m'}}</view>
     </view>
   </view>
   <view class='park-car'>
